--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,12 +1,12 @@
-
-<h1>All Posts</h1>
-    <% @posts.each do |post| %>
-        <p><%= link_to post.title, post %></p>
+<h1>All Questions</h1>
+    <% @questions.each do |q| %>
         <div class = "media">
             <div class = "media-body">
                 <h4 class = "media-heading">
-                    <%= link_to post.title, post %>
+                    <%= link_to q.title, q %>
                 </h4>
             </div>
         </div>
     <% end %>
+    
+    
