--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,29 +1,12 @@
-<h1><%= @topic.name %></h1>
- 
- <%= link_to "Edit Topic", edit_topic_path, class: 'btn btn-success' %>
- <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
+<h1><%= @post.title %></h1>
  
  <div class="row">
    <div class="col-md-8">
-     <p class="lead"><%= @topic.description %></p>
-
-     <% @topic.posts.each do |post| %>
-       <div class="media">
-         <div class="media-body">
-           <h4 class="media-heading">
-             <%= link_to post.title, topic_post_path(@topic, post) %>
-           </h4>
-           <small>
-             submitted <%= time_ago_in_words(post.created_at) %> ago <br>
-             <%= post.comments.count %> Comments
-           </small>
-         </div>
-       </div>
-     <% end %>
+     <p><%= @topic.description %></p>
    </div>
    <div class="col-md-4">
-     <%= link_to "New Post", new_topic_post_path(@topic), class: 'btn btn-success' %>
-     <%= link_to "Delete Topic", @topic, method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this topic?' } %>
-
+     <%= link_to "Edit", edit_sponsored_post_path(@topic.sponsored_post, @topic), class: 'btn btn-success' %>
+     <%= link_to "Delete Post", [@topic.sponsored_post, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
    </div>
+ </div>>
  </div>
