--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,6 +14,8 @@
        <% if user_is_authorized_for_post?(@post) %>
            <%= link_to "Edit Post", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
            <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
+       <% elsif moderator_access?(@post) %>
+           <%= link_to "Edit Post", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
        <% end %>           
    </div>
  </div>
