--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -27,7 +27,7 @@
     </div>
     
     <div class="form-group">
-        <%= f.submit "Save", class: 'btn btn-sucess' %>
+        <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
 <% end %>
 
