--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,9 +18,19 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <% if comments_posts_related_to_user %>
+        <%= "#{current_user.name} has not submitted any posts yet." %>
+    <% else %>     
+        <h2>Posts</h2>
+        <%= render @user.posts %>
 
-<h2>Posts</h2>
-<%= render @user.posts %>
-
-<h2>Comments</h2>
-<%= render @user.comments %>
+        <h2>Comments</h2>
+        <%= render @user.comments %>
+    <% end %>
+</div>
+<div class="row">
+    <h4><%= "#{current_user.name} Bloccit Stats"%></h4><br />
+    <%= "Number of posts = #{current_user.posts.count}" %><br />
+    <%= "Number of favorited posts = #{current_user.favorites.count}" %>
+</div>
